--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,434 @@
-os
-glob
-re
-numpy
-tensorflow.keras
-flask
-werkzeug.utils
-gevent.pywsgi
+absl-py
+affine
+aiofiles
+aiohttp
+aiosignal
+aiosqlite
+alabaster
+anaconda-client
+ansi2html
+anyio
+argon2-cffi
+argon2-cffi-bindings
+arrow
+astroid
+astropy
+asttokens
+astunparse
+async-timeout
+atomicwrites
+attrs
+autopep8
+Babel
+backcall
+backports.functools-lru-cache
+backports.tempfile
+backports.weakref
+bcrypt
+beautifulsoup4
+binaryornot
+black
+bleach
+blinker
+blis
+bokeh
+boltons
+bqplot
+branca
+brotlipy
+cachetools
+catalogue
+certifi
+cffi
+chardet
+charset-normalizer
+click
+click-default-group
+click-plugins
+cligj
+cloudpickle
+clyent
+colorama
+colour
+comm
+confection
+ConfigArgParse
+contourpy
+cookiecutter
+cryptography
+cycler
+cymem
+cytoolz
+dacite
+dash
+dash-core-components
+dash-html-components
+dash-table
+dask
+debugpy
+decorator
+defusedxml
+Deprecated
+diff-match-patch
+dill
+dm-tree
+docstring-to-markdown
+docutils
+dtreeviz
+earthengine-api
+easydict
+eerepr
+efficientnet
+emoji
+entrypoints
+exceptiongroup
+executing
+fastjsonschema
+featuretools
+filelock
+flake8
+Flask
+flatbuffers
+folium
+fonttools
+frozenlist
+fsspec
+future
+gap-stat
+gast
+geemap
+gensim
+geocoder
+gevent
+glob2
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
+google-cloud-core
+google-cloud-storage
+google-crc32c
+google-pasta
+google-resumable-media
+googleapis-common-protos
+graphviz
+greenlet
+grpcio
+gunicorn
 h5py
+holidays
+htmlmin
+httplib2
+huggingface-hub
+idna
+image-classifiers
+image-registration
+imagecodecs
+ImageHash
+imageio
+imagesize
+importlib-metadata
+importlib-resources
+inflection
+iniconfig
+intervaltree
+ipycanvas
+ipydatawidgets
+ipyevents
+ipyfilechooser
+ipygany
+ipykernel
+ipyleaflet
+ipython
+ipython-genutils
+ipytree
+ipyvtklink
+ipywidgets
+isort
+itsdangerous
+jaraco.classes
+jax
+jedi
+jellyfish
+Jinja2
+jinja2-time
+joblib
+json5
+jsonpatch
+jsonpointer
+jsonschema
+jupyter-events
+jupyter-server
+jupyter-ydoc
+jupyter_client
+jupyter_core
+jupyter_server_fileid
+jupyter_server_ydoc
+jupyterlab
+jupyterlab-pygments
+jupyterlab-widgets
+jupyterlab_server
+kaggle
+keras
+Keras-Applications
+Keras-Preprocessing
+keyring
+kiwisolver
+langcodes
+laspy
+lazrs
+lazy-object-proxy
+lazy_loader
+libarchive-c
+libclang
+lightning-utilities
+linkify-it-py
+locket
+lxml
+Markdown
+markdown-it-py
+MarkupSafe
+matplotlib
+matplotlib-inline
+mccabe
+mdit-py-plugins
+mglearn
+mistune
+ml-dtypes
+mlxtend
+more-itertools
+mpmath
+multidict
+multimethod
+munkres
+murmurhash
+mypy-extensions
+namex
+nbclassic
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+networkx
+nltk
+notebook
+notebook_shim
+numpy
+numpydoc
+oauthlib
+open3d
+opencv-python
+opt-einsum
+package-name
+packaging
+pandas
+pandocfilters
+panel
+param
+paramiko
+parso
+partd
+pathlib
+pathspec
+pathy
+patsy
+pexpect
+phik
+pickleshare
+Pillow
+pkginfo
+platformdirs
+plotly
+pluggy
+ply
+pooch
+poyo
+preshed
+prometheus-client
+prompt-toolkit
+protobuf
+psutil
+ptyprocess
+pure-eval
+pyasn1
+pyasn1-modules
+pycodestyle
+pycosat
+pycparser
+pydantic
+pydocstyle
+pyerfa
+pyflakes
+Pygments
+PyJWT
+pylint
+pylint-venv
+PyNaCl
+pyntcloud
+pyOpenSSL
+pyparsing
+pyperclip
+pyproj
+PyQt5
+PyQt5-sip
+PyQtWebEngine
+pyreadline
+pyrsistent
+pyshp
+PySocks
+pystackreg
+pytest
+python-box
+python-crfsuite
+python-dateutil
+python-dotenv
+python-json-logger
+python-lsp-black
+python-lsp-jsonrpc
+python-lsp-server
+python-slugify
+pythreejs
+pytoolconfig
+pytorch-lightning
+pytz
+pyu2f
+pyvista
+pyvista-xarray
+pyviz-comms
+PyWavelets
+pywin32
+pywin32-ctypes
+pywinpty
+PyYAML
+pyzmq
+QDarkStyle
+qstylizer
+QtAwesome
+qtconsole
+QtPy
+rasterio
+ratelim
+regex
+requests
+requests-oauthlib
+requests-toolbelt
+retrying
+rfc3339-validator
+rfc3986-validator
+rioxarray
+roboflow
+rope
+rsa
+Rtree
+ruamel.yaml
+ruamel.yaml.clib
+safetensors
+scikit-image
+scikit-learn
+scipy
+scooby
+seaborn
+segmentation-models
+Send2Trash
+sip
+six
+sklearn
+sklearn-crfsuite
+smart-open
+sniffio
+snowballstemmer
+snuggs
+sortedcontainers
+soupsieve
+spacy
+spacy-legacy
+spacy-loggers
+Sphinx
+sphinxcontrib-applehelp
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-jsmath
+sphinxcontrib-qthelp
+sphinxcontrib-serializinghtml
+spyder
+spyder-kernels
+srsly
+stack-data
+statsmodels
+supervision
+sympy
+tabulate
+tangled-up-in-unicode
+tenacity
+tensorboard
+tensorboard-data-server
+tensorboard-plugin-wit
+tensorflow
+tensorflow-estimator
+tensorflow-intel
+tensorflow-io-gcs-filesystem
+termcolor
+terminado
+text-unidecode
+textblob
+textdistance
+thinc
+threadpoolctl
+three-merge
+tifffile
+timm
+tinycss2
+tokenizers
+toml
+tomli
+tomlkit
+toolz
+torch
+torchmetrics
+torchvision
+tornado
+tqdm
+traitlets
+traittypes
+transformers
+typeguard
+typer
+typing_extensions
+tzdata
+uc-micro-py
+ujson
+Unidecode
+uritemplate
+urllib3
+urwid
+valuedispatch
+vedo
+visions
+vtk
+waitress
+wasabi
+watchdog
+wcwidth
+webencodings
+websocket-client
+Werkzeug
+wget
+whatthepatch
+widgetsnbextension
+win-inet-pton
+woodwork
+wordcloud
+wrapt
+xarray
+xyzservices
+y-py
+yapf
+yarl
+ydata-profiling
+yolov4
+ypy-websocket
+zipp
+zope.event
+zope.interface
+zstandard
